syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

service UserService {
  rpc SendRegisterEmailCode(SendRegisterEmailCodeRequest) returns (SendRegisterEmailCodeResponse);
  rpc Verify(VerifyRequest) returns (VerifyResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc BatchGetUsers(BatchGetUsersRequest) returns (BatchGetUsersResponse);
  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse);
  rpc UnfollowUser(UnfollowUserRequest) returns (UnfollowUserResponse);
  rpc GetFollowsCount(GetFollowsCountRequest) returns (GetFollowsCountResponse);
  rpc GetFansCount(GetFansCountRequest) returns (GetFansCountResponse);
  rpc BatchGetIsFollowed(BatchGetIsFollowedRequest) returns (BatchGetIsFollowedResponse);
}

message IsFollowedQuery {
  int64 follower = 1;
  int64 followee = 2;
}

message BatchGetIsFollowedRequest {
  repeated IsFollowedQuery query = 1;
}

message IsFollowedResponse {
  int64 follower = 1;
  int64 followee = 2;
  bool isFollowed = 3;
}

message BatchGetIsFollowedResponse {
  repeated IsFollowedResponse result = 1;
}

message GetFollowsCountRequest {
  int64 user_id = 1;
}

message GetFollowsCountResponse {
  int64 count = 1;
}

message GetFansCountRequest {
  int64 user_id = 1;
}

message GetFansCountResponse {
  int64 count = 1;
}

message FollowUserRequest {
  int64 follower = 1;
  int64 followee = 2;
}

message FollowUserResponse {}

message UnfollowUserRequest {
  int64 follower = 1;
  int64 followee = 2;
}

message UnfollowUserResponse {}

message SendRegisterEmailCodeRequest {
  string email = 1;
}

message SendRegisterEmailCodeResponse {}

message VerifyRequest {
  string email = 1;
  string password = 2;
}

message VerifyResponse {
  User user = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string code = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserByIdRequest {
  int64 id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  optional string fullname = 2;
  optional string avatar = 3;
  optional string bio = 4;
}

message UpdateUserResponse {}

message User {
  int64 id = 1;
  string email = 2;
  string fullname = 3;
  string avatar = 4;
  string bio = 5;
  google.protobuf.Timestamp created_at = 6;
  string serial_number = 7;
}

message BatchGetUsersRequest {
  repeated int64 ids = 1;
}

message BatchGetUsersResponse {
  map<int64, User> user = 1;
}
